--- a/themes/caloriefountain/assets/css/custom.css
+++ b/themes/caloriefountain/assets/css/custom.css
@@ -43,6 +43,8 @@ table.sortable thead {
     font-weight: bold;
     cursor: default;    
 }
-table.sortable th:not(.sorttable_sorted):not(.sorttable_sorted_reverse):not(.sorttable_nosort):after { 
-    content: " \25B4\25BE" 
+table.sortable th:not(.sorttable_sorted):not(.sorttable_sorted_reverse):not(.sorttable_nosort)::after { 
+    /* content: " \25B4\25BE" */ 
+    content: "  "; 
+    width:100%;
 }
