--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -35,3 +35,16 @@ footer a:hover, .entry-content a:hover {
     border-bottom-style: solid;
     border-bottom-color: #dddddd;
 }
+
+
+table.sortable thead {
+    background-color:#eee;
+    color:#112233;
+    font-weight: bold;
+    cursor: default;    
+}
+table.sortable th:not(.sorttable_sorted):not(.sorttable_sorted_reverse):not(.sorttable_nosort)::after { 
+    /* content: " \25B4\25BE" */ 
+    content: "  "; 
+    width:100%;
+}
