Added a new markdown extension to insert a visible line break after the TEASER_END tag, so that it's easier for readers to find their place when they jump to the full article.

--- a/themes/caloriefountain/assets/css/custom.css
+++ b/themes/caloriefountain/assets/css/custom.css
@@ -48,3 +48,9 @@ table.sortable th:not(.sorttable_sorted):not(.sorttable_sorted_reverse):not(.sor
     content: "  "; 
     width:100%;
 }
+
+
+.teaserbreak {
+    width:50%;
+    border-top: solid #E0CF80 2px;
+}
