Nikola auto commit.
Source commit: 4c2bbc26a2bd7c7180d7f3fd679f3d80180f032a
Nikola version: 8.2.3

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -71,3 +71,11 @@ img.float-left {
     padding-top:5px;
     padding-bottom:5px;
 }
+
+a.bloglink {
+    color: #8FA051;
+}
+img.blogthumb {
+    max-height:180px;
+    margin-bottom:10px;
+}
