--- a/themes/caloriefountain/assets/css/custom.css
+++ b/themes/caloriefountain/assets/css/custom.css
@@ -4,7 +4,7 @@
     color: #7F7F7F;
 }
 
-footer a, .entry-content a {
+footer a, .entry-content a, .entry-summary a {
     color: #8FA051;
 }
 footer a:hover, .entry-content a:hover {
