--- a/themes/caloriefountain/assets/css/custom.css
+++ b/themes/caloriefountain/assets/css/custom.css
@@ -79,3 +79,6 @@ img.blogthumb {
     max-height:180px;
     margin-bottom:10px;
 }
+table tbody tr td img.flagicon {
+    max-width=35px!important;
+}
